fix native-image runtime warning log